o MainDeployer & SARDeployer use ServerConfig getHomeDir() +    getTempDir() and work off of them instead of jboss.system.home    property.